(feat)Finish basic code generation