@@ -24,6 +24,28 @@
   <build>
     <plugins>
       <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>3.2.2</version>
+      <configuration>
+          <argLine>-Dfile.encoding=UTF-8</argLine>
+      </configuration>
+    </plugin>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.10.1</version>
+      <configuration>
+        <release>21</release>
+        <encoding>UTF-8</encoding>
+        <compilerArgs>
+          <arg>--enable-preview </arg>
+          <arg>-encoding</arg>
+          <arg>UTF-8</arg>
+        </compilerArgs>
+      </configuration>
+    </plugin>
+      <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
           <archive>
